# StringBending

./: .gitignore  .gitmodules  README.md  TODO.md  output.txt
latex/: StringBending.tex
python/: fftSpeed.py
src/engine/: EigenUtility.h  ModalCoefficients.h  NlBendProcessor.cpp  NlBendProcessor.h
src/maxmsp/: build_copy.sh
src/maxmsp/NlBend/: CMakeLists.txt
src/maxmsp/NlBend/source/projects/NlBend.InputMap/: NlBend.InputMap.cpp
src/maxmsp/NlBend/source/projects/NlBend.ModalCoefficients/: CMakeLists.txt  NlBend.ModalCoefficients.cpp
src/maxmsp/NlBend/source/projects/NlBend.Output/: CMakeLists.txt  NlBend.Output.cpp
src/maxmsp/NlBend/source/projects/NlBend.OutputMap/: NlBend.OutputMap.cpp
src/maxmsp/NlBend/source/projects/NlBend.Processor/: NlBend.Processor.cpp
src/maxmsp/package/: manette.maxpat  testProc.maxpat
src/testing/: CMakeLists.txt  plotTest.py  testNlBendProcessor.cpp
